# ai-resume-job-matcher

./: .env.example  .gitignore  DOCKER-AUTH-DEBUG.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  railway.json  sonar-project.properties
.github/workflows/: ci-cd.yml
fastapi-ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
fastapi-ai-service/app/: __init__.py  main.py
fastapi-ai-service/app/models/: schemas.py
fastapi-ai-service/app/routers/: matching.py  resume.py
fastapi-ai-service/app/services/: gemini_service.py  ml_service.py  resume_parser.py
fastapi-ai-service/tests/: test_main.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/post-job/: page.tsx
frontend/app/profile/: loading.tsx  page.tsx
frontend/app/recruiter-dashboard/: page.tsx
frontend/app/register/: page.tsx
frontend/app/upload-resume/: page.tsx
frontend/components/: footer.tsx  mode-toggle.tsx  navbar.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/hooks/: use-auth.ts  use-current-year.ts
frontend/lib/: api.ts
frontend/lib/services/: job.ts  (+2 more)
frontend/styles/: globals.css
infrastructure/postgres-init/: init.sql
spring-boot-backend/: .dockerignore  Dockerfile  build.gradle.kts  package-lock.json  package.json
test_data/: resume_sample.txt
(+56 files in other folders)
