[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-matcher"
version = "0.1.0"
description = "AI-powered resume parsing and job matching service"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.12",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.2",
    "spacy>=3.7.6",
    "sentence-transformers>=3.1.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.1",
    "pydantic>=2.9.2",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.2",
    "aiofiles>=24.1.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]
